<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.hyphenate.easeui.widget.EaseTitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleBarBackground="@color/colorPrimary"
        app:titleBarTitle="@string/create_group_chat">

    </com.hyphenate.easeui.widget.EaseTitleBar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title_bar">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lay_group_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_margin="@dimen/activity_horizontal_margin">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/et_group_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_et_bg"
                    android:hint="@string/create_group_name"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:padding="5dp"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lay_group_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/lay_group_name">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/et_group_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_et_bg"
                    android:gravity="start"
                    android:hint="@string/group_description"
                    android:lines="3"
                    android:maxLength="30"
                    android:maxLines="3"
                    android:padding="5dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lay_group_reason"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/lay_group_description">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/et_group_reason"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_et_bg"
                    android:gravity="start"
                    android:hint="@string/create_group_reason"
                    android:lines="2"
                    android:maxLength="20"
                    android:maxLines="2"
                    android:padding="5dp" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/tv_option"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:text="@string/is_public"
                app:layout_constraintTop_toBottomOf="@id/lay_group_reason" />

            <RadioGroup
                android:id="@+id/rg_option"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/tv_option">

                <RadioButton
                    android:id="@+id/rb_unpublic"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/unpublic_group" />

                <RadioButton
                    android:id="@+id/rb_public"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/public_group" />
            </RadioGroup>

            <TextView
                android:id="@+id/tv_check"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:text="@string/add_group_need_check"
                app:layout_constraintTop_toBottomOf="@id/rg_option" />

            <RadioGroup
                android:id="@+id/rg_check"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/tv_check">

                <RadioButton
                    android:id="@+id/rb_dont_check"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dont_check" />

                <RadioButton
                    android:id="@+id/rb_check"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/check" />
            </RadioGroup>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_select_contact"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:background="@drawable/ic_send_btn_bg"
                android:text="@string/invite_friend"
                android:textColor="@color/color_white"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/rg_check"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btn_submit"
                app:layout_constraintStart_toStartOf="parent"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_submit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:background="@drawable/ic_send_btn_bg"
                android:text="@string/direct_submit"
                android:textColor="@color/color_white"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/rg_check"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_select_contact"
                app:layout_constraintEnd_toEndOf="parent"/>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>