<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="6dp"
    android:layout_margin="3dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/iv_head"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:srcCompat="@drawable/ic_account_circle_48px"/>
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_accept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/iv_head"
        app:layout_constraintBottom_toBottomOf="@id/iv_head"
        android:padding="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:focusable="true"
        android:clickable="true"
        android:background="@drawable/ic_blue_round_btn_bg"
        android:textColor="@color/color_white"
        android:textSize="@dimen/search"
        android:text="@string/contact_msg_accept"/>
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_refuse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toLeftOf="@id/tv_accept"
        app:layout_constraintTop_toTopOf="@id/iv_head"
        app:layout_constraintBottom_toBottomOf="@id/iv_head"
        android:background="@drawable/ic_red_round_btn_bg"
        android:padding="5dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:focusable="true"
        android:clickable="true"
        android:textColor="@color/color_white"
        android:textSize="@dimen/search"
        android:text="@string/contact_msg_refuse"/>
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/iv_head"
        app:layout_constraintLeft_toRightOf="@id/iv_head"
        app:layout_constraintRight_toLeftOf="@id/tv_refuse"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:singleLine="true"
        android:maxLines="1"
        android:ellipsize="end"
        android:textSize="18sp"
        android:text="@string/contact_msg_name"/>
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_reason"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        app:layout_constraintBottom_toBottomOf="@id/iv_head"
        app:layout_constraintLeft_toRightOf="@id/iv_head"
        app:layout_constraintRight_toLeftOf="@id/tv_refuse"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:singleLine="true"
        android:maxLines="1"
        android:ellipsize="end"
        android:textSize="13sp"
        android:text="@string/contact_msg_reason"/>

</android.support.constraint.ConstraintLayout>