<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/lay_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFEBEBEB"
    tools:context=".ui.detail.ContactDetailFragment">

    <com.hyphenate.easeui.widget.EaseTitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:titleBarBackground="@color/colorPrimary"
        app:titleBarTitle="@string/profile"
        app:titleBarLeftImage="@drawable/ic_navigate_before_black_24dp"
        app:titleBarRightImage="@drawable/ic_more_vert_white_24dp">

    </com.hyphenate.easeui.widget.EaseTitleBar>

    <Space
        android:id="@+id/space"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        app:layout_constraintTop_toBottomOf="@id/title_bar"/>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/lay_name"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintTop_toBottomOf="@id/space"
        android:background="@color/color_white">
        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/iv_head"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="10dp"
            app:srcCompat="@drawable/ic_account_circle"/>
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/iv_head"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginLeft="20dp"
            android:textSize="18sp"
            android:text="名称"/>
    </android.support.constraint.ConstraintLayout>

    <Space
        android:id="@+id/space2"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        app:layout_constraintTop_toBottomOf="@id/lay_name"/>

    <TextView
        android:id="@+id/tv_more"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/space2"
        android:gravity="center_vertical"
        android:background="@color/color_white"
        android:paddingLeft="10dp"
        android:textSize="18sp"
        android:text="@string/more"/>

    <Space
        android:id="@+id/space3"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_more"/>

    <Button
        android:id="@+id/btn_send_msg"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/space3"
        android:background="@drawable/ic_send_btn_bg"
        android:textColor="@color/color_login_btn_text"
        android:textSize="18sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/send_msg"/>

</android.support.constraint.ConstraintLayout>